Fix the intialResults line-height and long line not wrapping problem.

--- a/web/ojb-web-portal/src/main/resources/static/css/style.css
+++ b/web/ojb-web-portal/src/main/resources/static/css/style.css
@@ -1255,13 +1255,3 @@ input .shortDigit{
     border-top-left-radius: inherit; 
     border-top-right-radius: inherit; 
 }
-
-#rapbackDetailsFrame table{
-	line-height: .6!important;
-}
-
-pre{
-	white-space: pre-wrap;
-    word-break: keep-all;
-    overflow-wrap: anywhere;
-}
